--- a/css/styles.css
+++ b/css/styles.css
@@ -4,21 +4,18 @@ body{
 
 /* headings */
 
-
 .company-heading{
     color: red;
-    font-size: 1rem;
+    font-size: 0.8rem;
     letter-spacing: 2px;
     text-transform: uppercase;
 }
 
 .cart-heading{
-    font-size: 3rem;
+    font-size: 2rem;
     text-transform: capitalize;
-    width: 90%;
+    width: 85%;
 }
-
-
 
 /* nav bar */
 .navigation-bar{
@@ -43,20 +40,24 @@ body{
 }
 
 .thumbnails-list li img{
+    border-radius: 10px;
     height: 60px;
     margin: 0 auto;
     margin-right: 12px;
     width: 70px;
+
 }
 
 /* preview section */
 .preview-section{
+    
     margin: 0 auto;
     width:35%;
 }
 .cart-image{
-    margin-left: 225px;
+    border-radius: 10px;
     height: 320px;
+    margin-left: 200px;
     width: 320px;
 }
 /* cart */
@@ -74,7 +75,7 @@ body{
 }
 .item-details{
     padding: 0;
-    padding-left: 25px;
+    padding-left: 45px;
     margin-right: 20%;
     width: 35%;
 }
